test/fails/bad_generics/generic_loop.lgl
with T T: int f(int x) {
    return x;
}

void main() {
    print 1;
}